--- a/style.css
+++ b/style.css
@@ -4,4 +4,14 @@ body {
     color: silver;
     
 
-}
+};
+
+.nav {
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    list-style-type: none; 
+    
+};
